--- a/parameters.cfg
+++ b/parameters.cfg
@@ -3,8 +3,8 @@ num_beads 30
 dim 1
 dt 0.01
 beta 5.0
-max_blocs 20
-num_steps 10000
+max_blocks 20
+total_time 10000
 steps_per_sample 5
 thermalization_steps 5000
 num_bins 200
@@ -15,5 +15,5 @@ curvature 1.0
 charge 1.0
 diel_const 1.0
 length_scale 1.0
-to_measure 0 1 2 3
-to_print_every_sample 0 1 2 3
+to_measure 0 1
+to_print_every_sample 
