something is strange with the Observable::avg variable

--- a/parameters.cfg
+++ b/parameters.cfg
@@ -1,7 +1,6 @@
 num_parts 2
 num_beads 30
 dim 1
-dt 0.01
 beta 5.0
 max_blocks 20
 total_time 10000
@@ -15,5 +14,5 @@ curvature 1.0
 charge 1.0
 diel_const 1.0
 length_scale 1.0
-to_measure 0 1
-to_print_every_sample 
+to_measure 0 1 10
+to_print_every_sample 0 1 10
