now convergence in P seems to work

--- a/parameters.cfg
+++ b/parameters.cfg
@@ -3,10 +3,11 @@ num_beads 30
 dim 1
 beta 5.0
 max_blocks 20
-total_time 10000
-steps_per_sample 5
+total_time 100000
+steps_per_sample 1
 thermalization_steps 5000
 num_bins 200
+tolerance 0.1
 with_thermostat 1
 hbar 1.0
 mass 1.0
@@ -14,5 +15,5 @@ curvature 1.0
 charge 1.0
 diel_const 1.0
 length_scale 1.0
-to_measure 0 1 10
-to_print_every_sample 0 1 10
+to_measure 0 1 3
+to_print_every_sample 0 1 3
