exchange factor (Gamma) included

--- a/configuration.cfg
+++ b/configuration.cfg
@@ -3,11 +3,13 @@ num_beads 30
 dim 1
 beta 5.0
 max_blocks 20
-total_time 100000
+total_time 200000
 steps_per_sample 1
 thermalization_steps 5000
 num_bins 200
+sign 0
 tolerance 0.1
+steps_in_highest_mode 10
 with_thermostat 1
 hbar 1.0
 mass 1.0
