now units are working and energies as fcn of T are reasonable

--- a/configuration.cfg
+++ b/configuration.cfg
@@ -1,21 +1,20 @@
 num_parts 2
 dim 1
-tau 0.1
-beta 5.0
+tau 5.0e-7
+beta 1.0e-5
 max_blocks 20
-total_time 10000
+total_time 2000
 steps_per_sample 1
 thermalization_steps 5000
-num_bins 200
+num_bins 500
 sign 0
 tolerance 0.1
-steps_in_highest_mode 20
+steps_in_highest_mode 50
 with_thermostat 1
-hbar 1.0
-mass 1.0
-curvature 1.0
+hw 1.0e-4
+mass_in_m_e 1.0
 charge 1.0
 diel_const 1.0
 length_scale 1.0
-to_measure 0 1 3
-to_print_every_sample 0 1 3
+to_measure 10 20 21
+to_print_every_sample 10 20 21
