--- a/configuration.cfg
+++ b/configuration.cfg
@@ -1,7 +1,7 @@
 num_parts 2
-dim 1
-tau 5.0e-7
-beta 1.0e-5
+dim 2
+tau 1.5
+beta 5.0
 max_blocks 20
 total_time 2000
 steps_per_sample 1
@@ -11,10 +11,11 @@ sign 0
 tolerance 0.1
 steps_in_highest_mode 50
 with_thermostat 1
-hw 1.0e-4
+using_input_file 0
+hw 3.0
 mass_in_m_e 1.0
 charge 1.0
 diel_const 1.0
 length_scale 1.0
-to_measure 10 20 21
-to_print_every_sample 10 20 21
+to_measure 0 1 3 10
+to_print_every_sample 0 1 3 10
