--- a/configuration.cfg
+++ b/configuration.cfg
@@ -2,25 +2,23 @@ num_parts 2
 dim 2
 tau 0.10
 beta 1.0
-max_blocks 20
-total_time 5000
+num_blocks 20
+total_time 10000
 steps_per_sample 1
 thermalization_steps 5000
 num_bins 500
 sign -1
-tolerance 0.1
 steps_in_highest_mode 50
 with_thermostat 1
-using_input_file 0
-metad_on 1
+metad_on 0
 cv_id 2
 gauss_width 1.0
 bias_factor 5.0
 bias_update_time 10
 hw 3.0
 mass_in_m_e 1.0
-charge 1.0
-diel_const 1.0
+charge_in_e 1.0
+diel_const_rel 1.0
 length_scale 1.0
 to_measure 0 1 3
 to_print_every_sample 0 1 3
