varying metaD parameters

--- a/configuration.cfg
+++ b/configuration.cfg
@@ -3,18 +3,19 @@ dim 2
 tau 0.10
 beta 1.0
 num_blocks 20
-total_time 5000
-steps_per_sample 1
+total_time 1000
+dt_md 0.005
+dt_sample 0.025
 thermalization_steps 5000
 num_bins 500
 sign -1
-steps_in_highest_mode 50
 with_thermostat 1
 metad_on 1
-cv_id 2
-gauss_width 4.0
-bias_factor 10.0
-bias_update_time 10
+cv_id 3
+gauss_width 0.5
+bias_factor 5.0
+first_height 1.0
+bias_update_time 2.0
 hw 3.0
 mass_in_m_e 1.0
 charge_in_e 1.0
