now at least ed-cv is robust

--- a/configuration.cfg
+++ b/configuration.cfg
@@ -3,19 +3,19 @@ dim 2
 tau 0.10
 beta 1.0
 num_blocks 20
-total_time 1000
+total_time 3000
 dt_md 0.005
-dt_sample 0.025
-thermalization_steps 5000
-num_bins 500
-sign -1
+dt_sample 0.01
+thermalization_time 100
+num_bins 100
+sign 1
 with_thermostat 1
 metad_on 1
-cv_id 3
-gauss_width 0.5
-bias_factor 5.0
-first_height 1.0
-bias_update_time 2.0
+cv_id 2
+gauss_width 1.0
+bias_factor 7.5
+first_height 0.3
+bias_update_time 10.0
 hw 3.0
 mass_in_m_e 1.0
 charge_in_e 1.0
