--- a/configuration.cfg
+++ b/configuration.cfg
@@ -1,25 +1,28 @@
 num_parts 2
 dim 2
-tau 0.10
+tau 0.1
 beta 1.0
 num_blocks 20
-total_time 3000
-dt_md 0.005
+total_time 1000
+dt_md 0.0005
+dt_md_slow 0.0005
 dt_sample 0.01
 thermalization_time 100
-num_bins 100
-sign 1
+num_bins 50
+sign 0
 with_thermostat 1
-metad_on 1
+metad_on 0
 cv_id 2
-gauss_width 1.0
-bias_factor 7.5
-first_height 0.3
+gauss_width 2.0
+bias_factor 5.0
+first_height 0.5
 bias_update_time 10.0
 hw 3.0
 mass_in_m_e 1.0
 charge_in_e 1.0
 diel_const_rel 1.0
-length_scale 1.0
-to_measure 0 1 3
-to_print_every_sample 0 1 3
+to_measure 20 21 22 23
+to_print_every_sample 20 21 22 23
+interaction_id 1
+lj_energy 0.1
+lj_length 30.0
