--- a/configuration.cfg
+++ b/configuration.cfg
@@ -1,27 +1,31 @@
 num_parts 2
 dim 2
-tau 0.02
+tau 0.05
 beta 1
 num_blocks 20
-total_time 1000
-dt_md 0.001
-dt_sample 0.005
 thermalization_time 100
+non_sampling_time 30000
+sampling_time 10000
+dt_md 0.005
+dt_sample 0.005
 num_bins 50
 sign -1
 with_thermostat 1
 metad_on 1
 cv_id 2
-gauss_width 3.0
-bias_factor 5.0
+gauss_width 4.0
+bias_factor 10.0
 first_height 0.5
 bias_update_time 10.0
 hw 3.0
 mass_in_m_e 1.0
 charge_in_e 1.0
 diel_const_rel 1.0
-to_measure 0 1 2 3
-to_print_every_sample 0 1 2 3
-interaction_id 0
+to_measure 0 10
+to_print_every_sample 0 10
+interaction_id 1
 lj_energy 0.03
-lj_length 50.0
+lj_length 100.0
+wall_id 0
+wall_pos 20.0
+wall_energy 0.2
