--- a/configuration.cfg
+++ b/configuration.cfg
@@ -4,7 +4,7 @@ tau 0.1
 beta 1
 num_blocks 20
 thermalization_time 100
-non_sampling_time 30000
+non_sampling_time 500000
 sampling_time 10000
 dt_md 0.005
 dt_sample 0.005
@@ -12,7 +12,7 @@ num_bins 50
 sign -1
 with_thermostat 1
 metad_on 1
-cv_id 7
+cv_id 2
 gauss_width 4.0
 bias_factor 10.0
 first_height 1.0
@@ -21,8 +21,8 @@ hw 3.0
 mass_in_m_e 1.0
 charge_in_e 1.0
 diel_const_rel 1.0
-to_measure 0 10
-to_print_every_sample 0 10
+to_measure 0 1 2 3
+to_print_every_sample 0 1 2 3
 
 interaction_id 0
 lj_length 100.0
