--- a/configuration.cfg
+++ b/configuration.cfg
@@ -1,30 +1,32 @@
 num_parts 2
 dim 2
 tau 0.1
-beta 1
+beta 2
 num_blocks 20
-thermalization_time 100
-non_sampling_time 500000
-sampling_time 10000
+thermalization_time 250
+non_sampling_time 20000
+sampling_time 20000
 dt_md 0.005
 dt_sample 0.005
 num_bins 50
-sign -1
+sign 1
 with_thermostat 1
 metad_on 1
 cv_id 2
 gauss_width 4.0
-bias_factor 10.0
-first_height 1.0
+bias_factor 6.0
+first_height_in_kBT 1.0
 bias_update_time 10.0
-hw 3.0
-mass_in_m_e 1.0
-charge_in_e 1.0
-diel_const_rel 1.0
+wigner_parameter 1.34
+mass_in_m_e 0.067
 to_measure 0 1 2 3
 to_print_every_sample 0 1 2 3
 
-interaction_id 0
+interaction_id 2
+charge_in_e 1.0
+diel_const_rel 12.5
+screening_factor 0.862
+
 lj_length 100.0
 lj_energy 0.03
 
