--- a/configuration.cfg
+++ b/configuration.cfg
@@ -1,23 +1,24 @@
 num_parts 2
 dim 2
 tau 0.067
-beta 1.0
+beta 1
 num_blocks 10
 thermalization_time 300
-non_sampling_time 0
-sampling_time 20000
+non_sampling_time 2000
+sampling_time 10000
 dt_md 0.001
 dt_sample 0.005
 num_bins 50
 sign 1
 with_thermostat 1
-metad_on 0
+metad_on 1
 cv_id 2
 gauss_width 5.0
 bias_factor 6.0
 first_height_in_kBT 0.5
 bias_update_time 10.0
-wigner_parameter 1.34
+hwx 5.1
+hwy 5.1
 mass_in_m_e 0.07
 to_measure 0 1 2 3
 to_print_every_sample 0 1 2 3
@@ -25,7 +26,7 @@ to_print_every_sample 0 1 2 3
 interaction_id 2
 charge_in_e 1.0
 diel_const_rel 12.5
-screening_factor 0.862
+screening_factor 1.288
 
 lj_length 100.0
 lj_energy 0.03
