--- a/configuration.cfg
+++ b/configuration.cfg
@@ -1,13 +1,14 @@
 num_parts 2
 dim 2
-tau 0.067
+tau 0.1
 beta 1
 num_blocks 10
-thermalization_time 0
+connected 0
+thermalization_time 100
 non_sampling_time 0
-sampling_time 500
+sampling_time 1000
 dt_md 0.001
-dt_sample 0.05
+dt_sample 0.01
 num_bins 50
 sign 1
 with_thermostat 1
@@ -17,8 +18,8 @@ gauss_width 5.0
 bias_factor 6.0
 first_height_in_kBT 0.5
 bias_update_time 10.0
-hwx 5.1
-hwy 5.1
+hwx 4.23
+hwy 5.84
 mass_in_m_e 0.07
 to_measure 0 1 2 3
 to_print_every_sample 0 1 2 3
@@ -26,7 +27,7 @@ to_print_every_sample 0 1 2 3
 interaction_id 2
 charge_in_e 1.0
 diel_const_rel 12.5
-screening_factor 0.862
+screening_factor 1
 
 lj_length 100.0
 lj_energy 0.03
