--- a/configuration.cfg
+++ b/configuration.cfg
@@ -1,16 +1,17 @@
 num_parts 2
 dim 2
-tau 0.067
-beta 1
+tau 0.1
+beta 2
 num_blocks 10
 connected 0
 thermalization_time 100
-non_sampling_time 100000
-sampling_time 10000
-dt_md 0.001
+non_sampling_time 0
+sampling_time 5000
+dt_md 0.005
 dt_sample 0.005
 num_bins 50
-sign 1
+num_bins_2d 200
+sign 0
 with_thermostat 1
 metad_on 0
 cv_id 2
@@ -18,13 +19,13 @@ gauss_width 15.0
 bias_factor 5.0
 first_height_in_kBT 0.5
 bias_update_time 10.0
-hwx 4.23
-hwy 5.84
-mass_in_m_e 0.07
+hwx 3.0
+hwy 3.0
+mass_in_m_e 1.0
 to_measure 0 1 2 3
 to_print_every_sample 0 1 2 3
 
-interaction_id 2
+interaction_id 0
 charge_in_e 1.0
 diel_const_rel 12.5
 screening_factor 1
