--- a/configuration.cfg
+++ b/configuration.cfg
@@ -1,35 +1,38 @@
 num_parts 2
-dim 2
+dim 1
 tau 0.1
-beta 2
-num_blocks 10
+beta 1
+sign -1
 connected 0
-thermalization_time 100
-non_sampling_time 0
-sampling_time 5000
+to_measure 0 1 2 3
+to_print_every_sample 
+more_output 0
+num_blocks 10
+num_bins 200
+num_bins_2d 200
+
 dt_md 0.005
 dt_sample 0.005
-num_bins 50
-num_bins_2d 200
-sign 0
 with_thermostat 1
-metad_on 0
+thermalization_time 100
+non_sampling_time 1000000
+sampling_time 100000
+
+metad_on 1
 cv_id 2
-gauss_width 15.0
-bias_factor 5.0
+gauss_width 4.0
+bias_factor 4.0
 first_height_in_kBT 0.5
 bias_update_time 10.0
+
 hwx 3.0
 hwy 3.0
 mass_in_m_e 1.0
-to_measure 0 1 2 3
-to_print_every_sample 0 1 2 3
 
 interaction_id 0
 charge_in_e 1.0
 diel_const_rel 12.5
 screening_factor 1
-
 lj_length 100.0
 lj_energy 0.03
 
