preparing to start with 3 particles

--- a/configuration.cfg
+++ b/configuration.cfg
@@ -2,7 +2,7 @@ num_parts 2
 dim 1
 tau 0.1
 beta 1
-sign -1
+sign 1
 connected 0
 to_measure 0 1 2 3
 to_print_every_sample 
@@ -15,8 +15,8 @@ dt_md 0.005
 dt_sample 0.005
 with_thermostat 1
 thermalization_time 100
-non_sampling_time 1000000
-sampling_time 100000
+non_sampling_time 000
+sampling_time 1000
 
 metad_on 1
 cv_id 2
