added graph class

--- a/configuration.cfg
+++ b/configuration.cfg
@@ -1,4 +1,5 @@
 num_parts 2
+total_spin_times_two 0
 dim 1
 tau 0.1
 beta 1
@@ -18,9 +19,9 @@ thermalization_time 100
 non_sampling_time 000
 sampling_time 1000
 
-metad_on 1
+metad_on 0
 cv_id 2
-gauss_width 4.0
+gauss_width 2.0
 bias_factor 4.0
 first_height_in_kBT 0.5
 bias_update_time 10.0
