--- a/configuration.cfg
+++ b/configuration.cfg
@@ -1,12 +1,14 @@
 num_parts 2
-total_spin_times_two 0
+spin_times_two 2
+use_projection 0
 dim 1
 tau 0.1
 beta 1
-sign 1
+biased_graph 1
+sign -1
 connected 0
 to_measure 0 1 2 3
-to_print_every_sample 
+to_print_every_sample 0
 more_output 0
 num_blocks 10
 num_bins 200
@@ -15,13 +17,13 @@ num_bins_2d 200
 dt_md 0.005
 dt_sample 0.005
 with_thermostat 1
-thermalization_time 100
-non_sampling_time 000
-sampling_time 1000
+thermalization_time 200
+non_sampling_time 5000
+sampling_time 5000
 
-metad_on 0
-cv_id 2
-gauss_width 2.0
+metad_on 1
+cv_id 6
+gauss_width 3.0
 bias_factor 4.0
 first_height_in_kBT 0.5
 bias_update_time 10.0
