--- a/configuration.cfg
+++ b/configuration.cfg
@@ -1,11 +1,11 @@
 num_parts 2
-spin_times_two 0
+spin_times_two 2
 use_projection 0
 dim 1
 tau 0.1
-beta 1.2
+beta 1.0
 biased_graph 1
-sign 0
+sign 1
 connected 0
 to_measure 0 2 3
 to_print_every_sample 
@@ -20,14 +20,17 @@ dt_sample 0.005
 with_thermostat 1
 thermalization_time 100
 non_sampling_time 00
-sampling_time 10000
+sampling_time 1000
 
 metad_on 0
-cv_id 4
-gauss_width 1.0
-bias_factor 4.0
+cv_id 6
+gauss_width 3.0
+bias_factor 3.0
 first_height_in_kBT 0.5
-bias_update_time 10.0
+bias_update_time 5.0
+
+allow_permutation_switch 1
+permutation_trial_time 11.0
 
 hwx 3.0
 hwy 3.0
